--- a/src/app/pages/home-administrativos/home-administrativos.component.html
+++ b/src/app/pages/home-administrativos/home-administrativos.component.html
@@ -1,3 +1,14 @@
-<p>
-  home-administrativos works!
-</p>
+<app-shared-menu [userRole]="'administrativo'"></app-shared-menu>
+
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
+    <ion-title>{{ pageTitle }}</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content id="main-content">
+  <h2>Bienvenido al Home de Administrativos</h2>
+</ion-content>
