--- a/src/app/pages/home-administrativos/home-administrativos.component.html
+++ b/src/app/pages/home-administrativos/home-administrativos.component.html
@@ -1,14 +1,14 @@
-<app-shared-menu [userRole]="'administrativo'"></app-shared-menu>
+<app-menu-administrativos></app-menu-administrativos>
 
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button menu="main-menu"></ion-menu-button>
+      <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>{{ pageTitle }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content id="main-content">
-  <h2>Bienvenido al Home de Administrativos</h2>
+<ion-content id="main-content" class="ion-padding">
+  <!-- Contenido del Home de Administrativos -->
 </ion-content>
