--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <!-- Menú lateral global -->
+  <ion-menu content-id="main-content" id="main-menu" side="start">
+    <app-menu-alumnos></app-menu-alumnos> <!-- Contenido del menú -->
+  </ion-menu>
+
+  <!-- Contenido principal de la aplicación -->
+  <ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
