Mistrabajos funcionando con buena navegación

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <ion-app>
-  <!-- Menú lateral global -->
-  <ion-menu content-id="main-content" id="main-menu" side="start">
-    <app-menu-alumnos></app-menu-alumnos> <!-- Contenido del menú -->
+  <!-- Menú lateral -->
+  <ion-menu content-id="main-content" side="start" id="main-menu">
+    <app-menu-alumnos></app-menu-alumnos>
   </ion-menu>
 
-  <!-- Contenido principal de la aplicación -->
+  <!-- Contenido principal -->
   <ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
