--- a/src/app/pages/alumnos/mistrabajos/mistrabajos.component.html
+++ b/src/app/pages/alumnos/mistrabajos/mistrabajos.component.html
@@ -1,7 +1,3 @@
-<ion-menu content-id="main-content" side="start" id="main-menu">
-  <app-menu-alumnos></app-menu-alumnos> <!-- Menú lateral -->
-</ion-menu>
-
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
@@ -11,7 +7,27 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content id="main-content" class="ion-padding">
-  <h2>Mis Trabajos</h2>
-  <p>Aquí se mostrarán los trabajos del alumno.</p>
+<ion-content class="ion-padding" id="main-content">
+  <!-- Verifica si hay trabajos en la lista -->
+  <div *ngIf="trabajos.length > 0; else noTrabajos">
+    <ion-list>
+      <ion-item *ngFor="let trabajo of trabajos">
+        <ion-label>
+          <h2>{{ trabajo.name }}</h2>
+          <p>Fecha: {{ trabajo.date }}</p>
+          <p>Inicio: {{ trabajo.startTime }}</p>
+          <p>Horas: {{ trabajo.hours }}</p>
+          <p>Descripción: {{ trabajo.description }}</p>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+  </div>
+
+  <!-- Plantilla para cuando no hay trabajos -->
+  <ng-template #noTrabajos>
+    <div class="no-trabajos">
+      <ion-icon name="sad-outline" size="large"></ion-icon>
+      <p>No hay trabajos registrados aún.</p>
+    </div>
+  </ng-template>
 </ion-content>
