Footer y perfil iniciando

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,6 @@
 
   <!-- Contenido principal -->
   <ion-router-outlet id="main-content"></ion-router-outlet>
+  <!-- Footer global -->
+  <app-footer-alumnos></app-footer-alumnos>
 </ion-app>
