--- a/src/app/pages/home-alumnos/home-alumnos.component.html
+++ b/src/app/pages/home-alumnos/home-alumnos.component.html
@@ -1,7 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <!-- Botón para abrir el menú -->
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button> <!-- Botón para abrir el menú -->
+      <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>Mis Trabajos</ion-title>
   </ion-toolbar>
@@ -23,7 +24,10 @@
 
   <!-- Historial de trabajos realizados -->
   <h2>
-    <ion-icon name="book-outline" style="vertical-align: middle; margin-right: 8px; color: white;"></ion-icon>
+    <ion-icon
+      name="book-outline"
+      style="vertical-align: middle; margin-right: 8px; color: white;"
+    ></ion-icon>
     Historial de Trabajos
   </h2>
   <ion-list>
