--- a/src/app/pages/administrativos/registrartrabajo/registrartrabajo.component.html
+++ b/src/app/pages/administrativos/registrartrabajo/registrartrabajo.component.html
@@ -11,20 +11,47 @@
   <form (ngSubmit)="registrar()" #registroForm="ngForm">
     <ion-item>
       <ion-label position="floating">Nombre del trabajo</ion-label>
-      <ion-input type="text" name="nombretrabajo" [(ngModel)]="nuevoTrabajo.nombretrabajo" required></ion-input>
+      <ion-input
+        type="text"
+        name="nombretrabajo"
+        [(ngModel)]="nuevoTrabajo.nombretrabajo"
+        required
+      ></ion-input>
     </ion-item>
+  
     <ion-item>
       <ion-label position="floating">Descripción</ion-label>
-      <ion-input type="text" name="desctrabajo" [(ngModel)]="nuevoTrabajo.desctrabajo" required></ion-input>
+      <ion-input
+        type="text"
+        name="desctrabajo"
+        [(ngModel)]="nuevoTrabajo.desctrabajo"
+        required
+      ></ion-input>
     </ion-item>
+  
     <ion-item>
       <ion-label position="floating">Ubicación</ion-label>
-      <ion-input type="text" name="ubicacion" [(ngModel)]="nuevoTrabajo.ubicacion" required></ion-input>
+      <ion-input
+        type="text"
+        name="ubicacion"
+        [(ngModel)]="nuevoTrabajo.ubicacion"
+        required
+      ></ion-input>
     </ion-item>
+  
     <ion-item>
-      <ion-label position="floating">ID del creador</ion-label>
-      <ion-input type="number" name="id_creador" [(ngModel)]="nuevoTrabajo.id_creador" required></ion-input>
+      <ion-label>Seleccionar Creador</ion-label>
+      <ion-select
+        [(ngModel)]="nuevoTrabajo.id_creador"
+        name="id_creador"
+        required
+      >
+        <ion-select-option *ngFor="let usuario of usuarios" [value]="usuario.id_user">
+          {{ usuario.nombre }} {{ usuario.apellido_paterno }}
+        </ion-select-option>
+      </ion-select>
     </ion-item>
+  
     <ion-button expand="block" type="submit">Registrar Trabajo</ion-button>
   </form>
 </ion-content>
