--- a/src/app/pages/administrativos/trabajos/trabajos.component.html
+++ b/src/app/pages/administrativos/trabajos/trabajos.component.html
@@ -8,13 +8,21 @@
 </ion-header>
 
 <ion-content class="ion-padding">
+  <!-- Botón para navegar a registrar trabajos -->
+  <div class="ion-text-center">
+    <ion-button [routerLink]="'/registrartrabajo'" expand="block">
+      Registrar Nuevo Trabajo
+    </ion-button>
+  </div>
+
+  <!-- Lista de trabajos -->
   <ion-list>
     <ion-item *ngFor="let trabajo of trabajos">
       <ion-label>
         <h2>{{ trabajo.nombretrabajo }}</h2>
         <p>{{ trabajo.desctrabajo }}</p>
         <p>Ubicación: {{ trabajo.ubicacion }}</p>
-        <p>ID del creador: {{ trabajo.id_creador }}</p>
+        <p>Creador: {{ trabajo.creador_nombre }} {{ trabajo.creador_apellido }}</p>
       </ion-label>
     </ion-item>
   </ion-list>
