--- a/src/app/pages/home-alumnos/home-alumnos.component.html
+++ b/src/app/pages/home-alumnos/home-alumnos.component.html
@@ -43,5 +43,15 @@
       </ion-content>
     </ng-template>
   </ion-modal>
-  
+
+  <h2>Últimos trabajos realizados</h2>
+  <ion-list>
+    <ion-item *ngFor="let trabajo of trabajosRealizados">
+      <ion-label>
+        <h3>Trabajo: {{ trabajo.nombretrabajo }}</h3>
+        <p>Fecha de inicio: {{ trabajo.fechainicio }}</p>
+        <p>Horas trabajadas: {{ trabajo.horasTrabajadas }} hora{{ trabajo.horasTrabajadas > 1 ? 's' : '' }}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
